--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,2 +1,18 @@
 ---
-message: "This node is using common data"
+classes:
+  - 'profile::base'
+
+ntp::servers:
+ntp::servers:
+ - 0.debian.pool.ntp.org
+ - 1.debian.pool.ntp.org
+ - 2.debian.pool.ntp.org
+ - 3.debian.pool.ntp.org
+
+locales::default_locale: 'en_GB.UTF-8'
+locales::locales:
+ - 'en_US.UTF-8 UTF-8'
+ - 'en_GB.UTF-8 UTF-8'
+ - 'de_DE.UTF-8 UTF-8'
+ - 'fr_FR.UTF-8 UTF-8'
+ - 'es_ES.UTF-8 UTF-8'
